--- a/first_responsive_website.html
+++ b/first_responsive_website.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
-    <link rel="stylesheet" media="screen and 
-    (max-width: 1250px)" href="phone.css">
+    <!-- <link rel="stylesheet" media="screen and 
+    (max-width: 1250px)" href="phone.css"> -->
 
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
